--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <h1> Hello World </h1>
+<h2> Hola hola</h2>
     <!--
 
     Hello Camper!
