--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-      <h2>hola hola </h2>
+      <h2>hello world</h2>
     <!--
 
     Hello Camper!
