--- a/index.html
+++ b/index.html
@@ -7,20 +7,15 @@
   </head>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-      <h2>hello world   hello</h2>
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+    <nav>
+      <ul>
+        <li><a href="#Welcome-section"></a></li>
+      </ul>
+    </nav>
+    <section id="Welcome-section">
+      <h1>Hey we are Mirna and Marcelo</h1>
+      <p> We are developers ! </p>
+    </section>
     <script  src="js/index.js"></script>
   </body>
 </html>
