--- a/index.html
+++ b/index.html
@@ -7,15 +7,41 @@
   </head>
 
   <body>
-    <nav>
+    <nav id="nabar">
       <ul>
-        <li><a href="#Welcome-section"></a></li>
+        <li><a href="#Welcome-section">About</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
     <section id="Welcome-section">
       <h1>Hey we are Mirna and Marcelo</h1>
       <p> We are developers ! </p>
     </section>
+
+    <section id="work">
+      <h2>These are some of our projects</h2>
+      <a href="https://github.com/M1rn4/microverse_project3" target="_blank">Here</a>
+    </section>
+
+    <section id="Contact">
+      <div class="contact_final">
+        <h2>Let's work together</h2>
+        <p>How do you take your coffe?</p>
+      </div> 
+      <div class="links">
+        <a href="a" target="_blank">Facebook </a>
+        <a href="b"target="_blank">Github</a>
+        <a href="c" target="_blank">Twitter</a>
+        <a href="d" target="_blank">Send a mail</a>
+        <a href="e" target="_blank">Call me</a>
+      </div>
+    
+    </section>
+    <footer>
+      <p>**This is just a fake portafolio. All the project and contact details are not real</p>
+
+    </footer>
     <script  src="js/index.js"></script>
   </body>
 </html>
